@@ -173,6 +173,11 @@ if ActiveRecord::Base.connection.supports_migrations?
         assert_equal 'smallint', one.sql_type
         assert_equal 'integer', four.sql_type
         assert_equal 'bigint', eight.sql_type
+      elsif current_adapter?(:MysqlAdapter)
+        assert_match /^int\(\d+\)/, default.sql_type
+        assert_match /^smallint\(\d+\)/, one.sql_type
+        assert_match /^int\(\d+\)/, four.sql_type
+        assert_match /^bigint\(\d+\)/, eight.sql_type
       elsif current_adapter?(:OracleAdapter)
         assert_equal 'NUMBER(38)', default.sql_type
         assert_equal 'NUMBER(1)', one.sql_type
